[package]
name = "lua_bundler"
version = "0.1.0-alpha"
authors = ["sw1ndler <@425797455486124032>"]
edition = "2021"
readme = "README.md"
description = "A bundler for Luau scripts"
repository = "https://github.com/Sw1ndlerScripts/LuaBundler"
license = "MIT"
keywords = ["lua", "bundler"]

[badges]
github = { repository = "Sw1ndlerScripts/LuaBundler"}


[dependencies]
anyhow = "1.0.75"
color-print = "0.3.4"
dialoguer = "0.10.4"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
darklua = "0.10.2"
clap = { version = "4.4.1", features = ["derive"] }
stacker = "0.1.15"
clearscreen = "2.0.1"

